@@ -53,9 +53,10 @@ Garbage_collection::do_transitive_closure()
                 this->section_reloc_map().find(entry);
       if (find_it == this->section_reloc_map().end()) 
           continue;
-      Garbage_collection::Sections_reachable v = find_it->second;
+      const Garbage_collection::Sections_reachable &v = find_it->second;
       // Scan the vector of references for each work_list entry. 
-      for (Garbage_collection::Sections_reachable::iterator it_v = v.begin();
+      for (Garbage_collection::Sections_reachable::const_iterator it_v =
+               v.begin();
            it_v != v.end();
            ++it_v)
         {
