@@ -1,3 +1,8 @@
+2015-04-06  Rafael Ávila de Espíndola <rafael.espindola@gmail.com>
+
+	* gc.cc (Garbage_collection::do_transitive_closure): Avoid a copy
+	constructor call.
+
 2015-04-06  Ilya Tocar  <ilya.tocar@intel.com>
 
 	PR gold/17641
